public class Socio {
    private String nombre;

    public String getNombre() {
        return nombre;
    }

    public Socio(String nombre) {
        this.nombre = nombre;
    }
}
